# authentication_service_actix

./: Cargo.toml  docker-compose.yml  env
migrations/: 20210810131902_create-tables.sql
src/: main.rs
src/config/: mod.rs  server_config.rs
src/db/: user.rs
src/handlers/: app_handler.rs  mod.rs
src/models/: mod.rs  user.rs
