[package]
name = "auth_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
serde_json = "1.0.64"
serde = { version =  "1.0", features = ["derive"] }
config = "0.10"
dotenv = "0.15"
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1.2"
tracing-subscriber = "0.2"
