[package]
name = "auth_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
serde_json = "1.0.64"
serde = { version =  "1.0", features = ["derive"] }
config = "0.10"
dotenv = "0.15"
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1.2"
tracing-subscriber = "0.2"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
uuid = { version = "0.8.2", features = ["serde"] }
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.1"
argonautica = { version = "0.2", features = ["simd"] }
futures = { version = "0.3", features = ["compat"] }
chrono = { version = "0.4.19", features = ["serde"] }